<package>
  <name>octomap_mapping</name>
  <version>1.1.1</version>
  <description>The</description>
  <maintainer email="armic@abc.com">Maintained by Armin Hornung</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/octomap_mapping</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Armin Hornung</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>octomap_server</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
