<package>
  <name>octomap_server</name>
  <version>1.1.1</version>
  <description>octomap_server loads a 3D map (as Octree-based OctoMap) and distributes it to other nodes in a compact binary format. 
	 See octomap_saver on how to request or save a map file. A visualization of the occupied cells is sent as MarkerArray.</description>
  <maintainer email="armin@abc.com">Armin Hornung</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/octomap_server</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Armin Hornung</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>octomap_ros</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -loctomap_server" cflags="-I${prefix}/include -I${prefix}/cfg/cpp"/>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
</export>

</package>
